style info section for mobiles. white gap appearing between hero and this section so will need to go back and fix this

--- a/style.css
+++ b/style.css
@@ -192,3 +192,69 @@ html {
     bottom: -8rem;
     transform: translateX(-50%);
 }
+
+/* ! Info section */
+
+.info-section {
+    background-color: var(--purple-100);
+}
+
+.info-section-container {
+    display: flex;
+    flex-direction: column;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-bottom: 6.4rem;;
+    text-align: center;
+    gap: 3.2rem;
+    color: var(--purple-900);
+    width: 100%;
+}
+
+.info-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.6rem;
+}
+
+.info-number {
+    width: 4.8rem;
+    height: 4.8rem;
+    border: .14rem solid var(--purple-900);
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    color: var(--purple);
+    margin-bottom: 0.8rem;
+    font-size: 2.4rem;
+}
+
+.info-heading {
+    font-size: 2.4rem;
+}
+
+/* ! Founder section */
+
+.founder-section {
+    position: relative;
+}
+
+.founder-section::before {
+    content: "";
+    background-color: var(--purple-100);
+    height: 500%;
+    width: 300%;
+    position: absolute;
+    border-radius: 50%;
+    bottom: 9rem;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: -1;
+}
+
+.founder-section-container {
+    padding-top: 11.2rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
